<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />

      <!--  <item
                android:id="@+id/nav_my_orders"
                android:icon="@drawable/ic_myorders"
                android:title="@string/my_orders" />
-->
        <item
                android:id="@+id/nav_analytics"
                android:icon="@drawable/ic_anayltics"
                android:title="@string/anayltics" />
        <item

                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications" />
        <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_phone_white"
                android:title="@string/contact_us" />

        <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:title="@string/language" />

        <!--<item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />-->

       <!-- <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />-->
    </group>




</menu>