<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkWhite"
            tools:context=".ui.SignInActivity">

        <ImageView
                android:scaleType="fitXY"
                android:id="@+id/toolbar_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/toolbar_big_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

        <TextView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_doctoraak"
                app:layout_constraintStart_toStartOf="@id/tv_doctoraak"
                 />

        <TextView
                android:layout_marginStart="25dp"
                android:id="@+id/tv_doctoraak"
                android:textSize="@dimen/toolbar_subtitle_textsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subtitle_margin_bottom"
                android:text="@string/sign_in_to_your_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/toolbar_image"
                app:layout_constraintStart_toStartOf="parent"
                 />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_phone"
                style="@style/EditTextNormal"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/phone_number_insurance_code"
                app:layout_constraintBottom_toTopOf="@id/guide_phone_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="18dp"
                    android:gravity="start|center_vertical"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_phone_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_password"
                style="@style/EditTextNormal"
                android:layout_marginStart="29dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/password"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_phone_pass"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/forget_password"
                android:padding="@dimen/_2sdp"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etl_password"
                app:layout_constraintTop_toBottomOf="@+id/etl_password" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/ButtonNormal"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/log_in"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_text_"
                app:layout_constraintEnd_toEndOf="@id/etl_phone"
                app:layout_constraintStart_toStartOf="@+id/etl_phone" />

        <TextView
                android:layout_marginBottom="15dp"
                android:id="@+id/tv_text_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                 />

        <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_text_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_text_"
                app:layout_constraintTop_toTopOf="@+id/tv_text_" />

        <include
                android:id="@+id/loading"
                layout="@layout/loading"
                android:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>