<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:padding="@dimen/_10sdp">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="start"
            android:hint="@string/enter_your_reason_if_you_want_to_cancel_your_order"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:minHeight="@dimen/_50sdp"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/ok"
            style="@style/normalTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_notes" />

    <TextView
            android:id="@+id/cancel"
            style="@style/normalTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ok"
            app:layout_constraintTop_toBottomOf="@id/et_notes" />


</androidx.constraintlayout.widget.ConstraintLayout>